# deep_research

./: .gitignore  README.md  cli.py  config.py  deep-research-config.toml  pyproject.toml
deep_research/: manager.py  memory.py  rlm.py
docs/: v1.md
prompts/: planner_system_instructions.md  subagent_prompt.md  synthesis_prompt.md
research/: config.py  coordinator.py  mcp_server.py  memory.py  models.py  planner.py  prompts.py  researcher.py
