[project]
name = "deep-research"
version = "0.2.0"
description = "a multi-agent deep research framework using smolagents for web research."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "smolagents>=1.14.0",
    "duckduckgo-search>=7.0.0",
    "markdownify>=0.14.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "textual>=8.1.1",
    "click>=8.1.0",
    "ddgs>=9.14.4",
]

[tool.setuptools.packages.find]
include = ["research*"]
